2006-03-04  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* sample-config.tcl: fixed comment about default
	username/password for stats interface. 

	* tcl/ttrace.tcl: removed

	* tcl/nstrace.tcl: new file w/o implicit relation
	to XOTcl package. All packages must now register
	callbacks to nstrace by providing their own code.
	The nstrace is now always loaded/present in the
	interp (see changes to nsd/init.tcl below).

	* tcl/stats.tcl: fixed some broken expressions,
	perhaps due to a bug in Tcl expression evaluator 

	* nsd/init.tcl: reorganized for better readability.
	All temporary procs are now prepended "_" instead
	of "_ns_" prefix. Added clarification comment about
	possible choices for interp initialization strategy.
	Always load nstrace.tcl library even if not configured.
	This allows extensions to use nstrace::isenabled 
	procedure to find out if the trace is active or not  
	and/or to register their own tracer implementations.

2006-03-03  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c: Use driver proc in WriterThread to ensure 
	proper driver's protocol processing, minor cleanups and changes to 
	support UDP socket driver

2006-03-02  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/request.c:
	* nsd.conn.c: Add versionstring into Ns_Request struct
	and made request parser more generic regarding protocol version
	to allow other http-like protocols to be parsed by same code

	* nsd/driver.c: Some minor cleanups and temp hack in SpoolerThread
	until the real bug will be discovered

2006-03-01  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* tests/http.test:
	* tests/test.nscfg
	* tests/testserver/modules/testhttp.tcl: Fixed error reporting during
	request parsing, now server returns 414/400 return codes and honors
	maxinput/maxheaders parameters. Test http-4.5 does not hang actually 
	but with sndbuf/rcvbug set to so small values it takes very logn time to